# AutiGuide_Lucy

./: README.txt  Trimmed_kb.py  app.py  knowledge_base.py  pyproject.toml
Lucy/: llm.py  lm_chatbot.py  matcher.py  nurse_mode.py  preprocessing.py
autiguide/: __init__.py  categories.py  chatbot.py  config.py  conversation.py  guided_flows.py  responses.py  retrieval.py  safety.py  text_processing.py
data/: Knowledge_team.json  test_question.md
lucy/: llm.py  lm_chatbot.py  matcher.py  nurse_mode.py  preprocessing.py  pydantic_logic.py  tui.py
static/: style.css
templates/: index.html  nurse.html
