[project]
name = "i-am-autistic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
]
